# ifacetool

./: .gitignore  Makefile  README  SNAPD_VERSION  go.mod  go.sum  ifacetool.py  minimal-test  pyproject.toml  requirements.txt  snapcraft.yaml
.github/workflows/: build.yaml
engine/: asserts.go  main.go  simulation.go
ops/: __init__.py  engine.py  fetch.py  simulation.py
