[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifacetool"
description = "tooling to work with snap interfaces"
readme = "README"
requires-python= ">=3.8"
dynamic = ["dependencies", "version"]

[project.scripts]
ifacetool = "ifacetool:cli"

[tool.setuptools]
py-modules = ["ifacetool"]
packages = ["ops"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = ["requirements.txt"]}
